--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
     <body>
         <header>
             <div class="header">
-                <p class="logo">Nike Fanboy</p>
+                <p class="logo"><a style="text-decoration:none" href="file:///Users/ngocphucdo/Code/python/codegym/index.html">Nike Fanboy</a></p>
+            </div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <ul class="navbar-nav ul">
                     <li class="nav-item ">
-                         <a class="nav-link" href="#">Home Page</a>
+                         <a class="nav-link" href="file:///Users/ngocphucdo/Code/python/codegym/index.html">Home Page</a>
                     </li>
                     <li class="nav-item ">
-                         <a class="nav-link" href="#">Nike</a>
+                         <a class="nav-link" href="file:///Users/ngocphucdo/Code/python/codegym/nike.html">Nike</a>
                      </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Adidas</a>
+                        <a class="nav-link" href="file:///Users/ngocphucdo/Code/python/codegym/adidas.html">Adidas</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Jordan</a>
+                        <a class="nav-link" href="file:///Users/ngocphucdo/Code/python/codegym/jordan.html">Jordan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" >New Blance</a>
+                        <a class="nav-link" href="file:///Users/ngocphucdo/Code/python/codegym/newblance.html" >New Blance</a>
                     </li>
                 </ul>
             </nav>
@@ -61,7 +62,7 @@
               <div class="carousel-item">
                 <img class="img-banner" src="file:///Users/ngocphucdo/Desktop/ipad_c4ec2d3ec9a35ebb991ab5be2ffd4f615a8f7bba39530%20(1).jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h2 class="text1">Clothings</h2>
+                  <h2 class="text1">HNBMG</h2>
                   <!-- <p class="text2">Sẽ phát triển thêm quần áo và phụ kiện trong thời gian sớm nhất</p> -->
                 </div>
               </div>
@@ -83,15 +84,32 @@
               <div class="media-body" style="margin-top: 15px;margin-left: 10px;">
                 <h3 class="mt-0">Nike Fanboy</h3>
                 <p>Trong xu thế nền văn hóa sát mặt đất và ngành công nghiệp thời trang đường phố đang rất phát triển tại Việt Nam, hàng trăm cửa hàng nổi lên, không hề có sự chọn lọc nhất định, kèm theo đó là một số vấn đề liên tục phát sinh khiến ta đắn đó quyết định mua item yêu thích của mình.</p>
-                <p class="mb-0">Việc tiếp cận một đôi sneakers chính hãng đối với nhiều người hiện nay vẫn là một điều khá mới lạ. Nắm bắt được điều đó, OSS đưa ra một khung giá sản phẩm cực kỳ cạnh tranh, hầu hết đều rơi vào khoảng từ 1,000,000đ – 3,000,000đ, đó cũng chính là điểm đáng chú ý nhất để Nike Fanboy so sánh với những sneakers store khác trên thị trường hiện tại.</p>
+                <p class="mb-0">Việc tiếp cận một đôi sneakers chính hãng đối với nhiều người hiện nay vẫn là một điều khá mới lạ. Nắm bắt được điều đó, Nike Fanboy đưa ra một khung giá sản phẩm cực kỳ cạnh tranh, hầu hết đều rơi vào khoảng từ 1,000,000đ – 3,000,000đ, đó cũng chính là điểm đáng chú ý nhất để chúng tôi so sánh với những sneakers store khác trên thị trường hiện tại.</p>
               </div>
             </div>
 
             <div class="right-main float-r">
+
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
+                    <div style="margin-top: 10px;">
+                        <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
+                        <div>
+                            999,000₫
+                        </div>
                     </div>
+                </div>
+
+                <div class="div-product">
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -100,9 +118,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -111,9 +131,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -122,9 +144,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -133,9 +157,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -144,9 +170,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -155,9 +183,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -166,9 +196,11 @@
                     </div>
                 </div>
                 <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
+                    <a href="file:///Users/ngocphucdo/Code/python/codegym/product-detail.html">
+                        <div>
+                            <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
+                        </div>
+                    </a>
                     <div style="margin-top: 10px;">
                         <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
                         <div>
@@ -176,17 +208,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="div-product">
-                    <div>
-                        <img class="img-product" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
-                    </div>
-                    <div style="margin-top: 10px;">
-                        <h6 class="text3">adidas Cloudfoam Pure 'Grey'</h6>
-                        <div>
-                            999,000₫
-                        </div>
-                    </div>
-                </div>
+
+
             </div>
             <div>
                 <div class="area_newsletter" style="margin-left: 210px">
