--- a/product-detail.html
+++ b/product-detail.html
@@ -10,7 +10,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script href="script.js">
-
         </script>
 
     </head>
@@ -41,7 +40,7 @@
             </nav>
         </header>
 <!-- MAIN -->
-        <div>
+        <div >
             <div class='left-detail' style="height: 600px;">
                 <img class="mg-l-50 mg-t-50 img-detail" src="file:///Users/ngocphucdo/Desktop/47432185_2485094618187007_2952843746040872960_o_de75b23ef67a4420930fa96b08af6bb7_grande.jpg" alt="">
             </div>
@@ -50,7 +49,7 @@
 					<h1 class="mg-t-50">adidas Cloudfoam Pure 'Red'</h1>
 					<span id="pro_sku">SKU: B43675-3</span>
                 </div>
-                <button class="button1" id="button" style="vertical-align:middle"><span>Mua hàng </span></button>
+                <button class="button1" id="button" data-toggle="modal" data-target=".bd-example-modal-lg" style="vertical-align:middle"><span>Mua hàng </span></button>
                 <div class="product-description">
     				<div class="title-bl">
     					<h2>Mô tả</h2>
@@ -68,6 +67,49 @@
 <!-- FOOTER -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
            <a href="http://www.screenprank.com/gandalf.html"> Phuc Ngan Nha</a>
+        </div>
+
+
+
+        <!-- pop-up -->
+        <div id='{{ item.id }}' class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content" style="width: 542px;height: 342px;">
+             <table style="margin-top: 30px;margin-left: 50px;border-top-width: 22px;">
+                 <form action="">
+                     <tr>
+                         <td>Tên khách hàng</td>
+                         <td><input type="text"></td>
+                     </tr>
+                     <tr>
+                         <td>Số điện thoại</td>
+                         <td><input type="text"></td>
+                     </tr>
+                     <tr>
+                         <td>Email</td>
+                         <td><input type="text"></td>
+                     </tr>
+                     <tr>
+                         <td>Địa chỉ nhận hàng</td>
+                         <td><input type="text"></td>
+                     </tr>
+                     <tr>
+                         <td>Hình thức thanh toán</td>
+                         <td>
+                             <input type="radio" id="ck1" value="checked"> Chuyển khoản
+                             <br>
+                             <input type="radio" id="ck2" value="check"> COD (Cash On Deliverly)
+
+                         </td>
+                     </tr>
+                     <tr>
+                         <td rowspan =2 colspan=2><button style="margin-left: 150px;margin-top: 30px;">Mua hàng</button></td>
+                     </tr>
+
+                 </form>
+             </table>
+            </div>
+          </div>
         </div>
 
     </body>
